--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Mulish', 'Arial', sans-serif;
     background-color: #181818;
     color: #f4f4f4;
     margin: 0;
@@ -12,6 +12,14 @@ main {
     display: grid;
     gap: 20px;
     padding: 20px;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+}
+
+h1, h2, h3 {
+    font-family: 'Philosopher', sans-serif;
+    font-weight: 700;
 }
 
 nav {
@@ -33,12 +41,7 @@ nav a:hover {
     background-color: #444;
     color: #ffcc00;
     border-radius: 5px;
-}
-
-main {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 20px;
+    transform: scale(1.07);
 }
 
 .card {
@@ -47,6 +50,10 @@ main {
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
 }
+
+/* img {
+    size
+} */
 
 footer {
     text-align: center;
