--- a/styles/base.css
+++ b/styles/base.css
@@ -67,7 +67,7 @@ img {
     height: auto;
 }
 
-.state-flag {
+/* .state-flag {
     display: flex;
     justify-content: center;
     flex-wrap: nowrap;
@@ -77,7 +77,7 @@ img {
     flex: 45%;
     padding: 5px;
     height: auto;
-}
+} */
 
 footer {
     text-align: center;
