--- a/styles/base.css
+++ b/styles/base.css
@@ -55,11 +55,25 @@ nav a:hover {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
 }
 
+.card li {
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
 .card a {
     color: #ffcc00;
     text-decoration: none;
     font-weight: 600;
     transition: all 0.3s ease-in-out;
+    margin-top: 30px;
+}
+
+.card a:hover {
+    color: #ffffff;
+    background-color: #444;
+    padding: 1px 2px;
+    border-radius: 5px;
+    transform: scale(1.04);
 }
 
 img {
