--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -1,3 +1,23 @@
-@media (min-width: 740px) {
-    
+@media only screen and (min-width: 40em) {
+    h1 {
+        font-size: 2rem;
+    }
+
+    .navigation {
+        display: flex;
+    }
+
+    .navigation li {
+        display: block;
+        flex: 1 1 100%;
+    }
+
+    .navigation a {
+        text-align: center;
+        padding: 5px 0;
+    }
+
+    #menu {
+        display: none;
+    }
 }
