--- a/styles/places-large.css
+++ b/styles/places-large.css
@@ -3,37 +3,42 @@
         position: absolute;
         top: 15%;
         left: 10%;
-        background-color: rgba(256, 256, 256, 0.4);
+        background-color: rgba(255, 255, 255, 0.4);
     }
 
     ul, li {
-        background-color: rgba(256, 256, 256, 0.4);
+        background-color: rgba(255, 255, 255, 0.4);
         color: var(--background-color);
+    }
+
+    li {
+        padding-left: 20px;
+        text-align: left;
     }
 
     .weather {
         position: absolute;
         bottom: 15%;
         right: 10%;
-        background-color: rgba(256, 256, 256, 0.4);
+        background-color: rgba(255, 255, 255, 0.4);
         text-align: center;
     }
 
-    .weather h2{
-        display: block;
-        font-size: 3rem;
-    }
-
-    .weather h3 {
-        display: none;
+    .weather h2::after {
+        content: "🌥️";
     }
 
     .weather img {
-        width: 0%;
-        height: auto;
+        display: none;
+    }
+
+    .weather span {
+        font-weight: bold;
+        color: var(--background-color);
+        background-color: rgba(255, 255, 255, 0);
     }
 
     .current-conditions {
-        background-color: rgba(256, 256, 256, 0.4);
+        background-color: rgba(255, 255, 255, 0.4);
     }
 }
