--- a/styles/places-large.css
+++ b/styles/places-large.css
@@ -32,7 +32,7 @@
         display: none;
     }
 
-    .weather span {
+    .data span, .weather span {
         font-weight: bold;
         color: var(--background-color);
         background-color: rgba(255, 255, 255, 0);
