--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -122,7 +122,7 @@ h3 {
     padding: 0.5rem;
 }
 
-#temples {
+.temples {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
@@ -131,7 +131,7 @@ h3 {
     padding: 0 1rem;
 }
 
-.temple-card {
+section {
     flex: 1 1 200px;
     max-width: 350px;
     min-width: 150px;
@@ -143,7 +143,7 @@ h3 {
     padding: 1rem;
 }
 
-.temple-card img {
+section img {
     margin: 1rem 0;
 }
 
