--- a/project/styles/crystal-clear-large.css
+++ b/project/styles/crystal-clear-large.css
@@ -1,5 +1,35 @@
+@media only screen and (min-width: 48em) {
+    .hero {
+        position: relative;
+        text-align: left;
+        overflow: hidden;
+    }
+
+    .hero-content {
+        position: absolute;
+        top: 50%;
+        left: 5%;
+        transform: translateY(-50%);
+        width: 45%;
+        background-color: rgba(255, 255, 255, 0.6);
+        padding: 1.5rem;
+        border-radius: 5px;
+        text-align: left;
+    }
+}
+
 @media only screen and (min-width: 40em) {
-    #menu {
+    .hamburger {
         display: none;
+    }
+
+    .main-nav, .main-nav.show {
+        display: block;
+        position: relative;
+    }
+
+    .main-nav ul {
+        display: flex;
+        flex-direction: row;
     }
 }
