--- a/styles/temples.css
+++ b/styles/temples.css
@@ -37,17 +37,6 @@ h1, header p {
     color: var(--text_color);
 }
 
-#menu {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    text-decoration: none;
-    padding: 0.5rem 0.75rem;
-}
-
-#menu::before {
-    content: "≡";
-}
 
 nav {
     background-color: var(--background_color);
@@ -56,6 +45,18 @@ nav {
     align-items: end;
     justify-content: end;
     gap: 1rem;
+}
+
+/* #menu {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    text-decoration: none;
+    padding: 0.5rem 0.75rem;
+} */
+
+#menu::before {
+    content: "≡";
 }
 
 .navigation {
@@ -68,7 +69,7 @@ nav {
     display: none;
 }
 
-.navigation a {
+.navigation a, #menu {
     display: block;
     padding: 0.75rem;
     text-align: left;
